[gd_scene load_steps=8 format=3 uid="uid://bqq2ouiqujyhp"]

[ext_resource type="Script" path="res://scripts/menus/menu.gd" id="1_lencv"]
[ext_resource type="Theme" uid="uid://ujjtd62wvxsf" path="res://imports/pixel_theme.tres" id="3_31at3"]
[ext_resource type="FontFile" uid="uid://cfcpbnf37p2u" path="res://assets/fonts/buxotic/Buxotic.otf" id="3_hm35d"]
[ext_resource type="StyleBox" uid="uid://cln15kpjcsiss" path="res://imports/style_box_normal.tres" id="4_p0pco"]
[ext_resource type="StyleBox" uid="uid://ddmyelf7ggrso" path="res://imports/style_box_hover.tres" id="5_giavi"]
[ext_resource type="StyleBox" uid="uid://b3p1lms34esoy" path="res://imports/style_box_click.tres" id="6_hv51a"]

[sub_resource type="Theme" id="Theme_vv4fh"]
default_font = ExtResource("3_hm35d")
default_font_size = 100

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lencv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12828, 0.0586829, 0.0102415, 1)

[node name="AudioMainMenu" type="AudioStreamPlayer" parent="."]

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = 427.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/margin_top = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
metadata/_edit_group_ = true

[node name="NewGameButton" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_31at3")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.729412, 1)
theme_override_styles/normal = ExtResource("4_p0pco")
theme_override_styles/hover = ExtResource("5_giavi")
theme_override_styles/pressed = ExtResource("6_hv51a")
text = "New Game"

[node name="OptionButton" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_31at3")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.729412, 1)
theme_override_styles/normal = ExtResource("4_p0pco")
theme_override_styles/hover = ExtResource("5_giavi")
theme_override_styles/pressed = ExtResource("6_hv51a")
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_31at3")
theme_override_colors/font_color = Color(0.999229, 0.925361, 0.815046, 1)
theme_override_styles/normal = ExtResource("4_p0pco")
theme_override_styles/hover = ExtResource("5_giavi")
theme_override_styles/pressed = ExtResource("6_hv51a")
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_vv4fh")
theme_override_colors/font_color = Color(0.99265, 0.511324, 0.323574, 1)
text = "Occult Room"

[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_start_button_1p_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer2/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
